--- a/index.html
+++ b/index.html
@@ -11,10 +11,56 @@
 <body>
     <h1>Minesweeper</h1>
     <div class="controls">
-        <button id="resetBtn">Reset Game</button>
+        <button id="settingsBtn">⚙️ Settings</button>
         <span>Flags: <span id="flagCount"></span></span>
     </div>
     <div id="board"></div>
+
+    <!-- Settings Menu -->
+    <div id="settingsMenu" class="settings-menu">
+        <div class="settings-header">
+            <h2>Settings</h2>
+            <button id="closeSettingsBtn" class="close-btn">&times;</button>
+        </div>
+        <div class="settings-content">
+            <!-- Reset Button -->
+            <button id="resetBtn">Reset Game</button>
+
+            <!-- Width Input -->
+            <div class="setting">
+                <label for="widthInput">Width: <span id="widthValue">16</span></label>
+                <input type="number" id="widthInput" min="8" max="30" value="16" aria-label="Board Width">
+            </div>
+
+            <!-- Height Input -->
+            <div class="setting">
+                <label for="heightInput">Height: <span id="heightValue">16</span></label>
+                <input type="number" id="heightInput" min="8" max="30" value="16" aria-label="Board Height">
+            </div>
+
+            <!-- Mine Quantity Input -->
+            <div class="setting">
+                <label for="mineInput">Mines: <span id="mineValue">90</span></label>
+                <input type="number" id="mineInput" min="10" max="400" value="90" aria-label="Mine Quantity">
+            </div>
+
+            <!-- Difficulty Slider -->
+            <div class="setting">
+                <label for="difficultySlider">Difficulty: <span id="difficultyValue">Easy</span></label>
+                <input type="range" id="difficultySlider" min="0" max="2" step="1" value="0" aria-label="Difficulty Level">
+                <div class="difficulty-labels">
+                    <span>Easy</span>
+                    <span>Hard</span>
+                    <span>Unlocked</span>
+                </div>
+                <div class="info">The difficulty slider controlls how constrained the mine placement is. Easy should require no brainpower. Hard should be harder than easy. Unlocked places no constraints on mine placement which may result in unsolvable games.</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Overlay -->
+    <div id="overlay" class="overlay"></div>
+
     <script src="generator.js"></script>
     <script src="script.js"></script>
 </body>
