--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
                 <div class="info">The difficulty slider controlls how constrained the mine placement is. Easy should require no brainpower. Hard should be harder. Unlocked places no constraints on mine placement which may result in unsolvable games.</div>
                 <div class="info">Note: "Hard" difficulty does not guarantee a harder game, but it simply allows the generator to make one that is.</div>
             </div>
+
+            <div class="setting">
+                <label for="shapeSelector">Shape:</label>
+                <select id="shapeSelector">
+                    <option value="standard">Standard</option>
+                    <option value="knight">Knight</option>
+                    <option value="cross">Plus</option>
+                    <option value="bigball">Big Ball</option>
+                </select>
+                <div class="info">The shape settings are experimental and are likely to break.</div>
+            </div>
         </div>
     </div>
 
