adjust default board dimensions and mine quantity for better gameplay experience

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <!-- Width Input -->
             <div class="setting">
                 <label for="widthInput">Width: <span id="widthValue">16</span></label>
-                <input type="number" id="widthInput" min="8" max="30" value="16" aria-label="Board Width">
+                <input type="number" id="widthInput" min="8" max="30" value="9" aria-label="Board Width">
             </div>
 
             <!-- Height Input -->
             <div class="setting">
                 <label for="heightInput">Height: <span id="heightValue">16</span></label>
-                <input type="number" id="heightInput" min="8" max="30" value="16" aria-label="Board Height">
+                <input type="number" id="heightInput" min="8" max="30" value="9" aria-label="Board Height">
             </div>
 
             <!-- Mine Quantity Input -->
             <div class="setting">
                 <label for="mineInput">Mines: <span id="mineValue">90</span></label>
-                <input type="number" id="mineInput" min="10" max="400" value="90" aria-label="Mine Quantity">
+                <input type="number" id="mineInput" min="10" max="400" value="15" aria-label="Mine Quantity">
             </div>
 
             <!-- Difficulty Slider -->
@@ -65,6 +65,11 @@
                 <div class="info">The difficulty slider controlls how constrained the mine placement is. Easy should require no brainpower. Hard should be harder. Unlocked places no constraints on mine placement which may result in unsolvable games.</div>
                 <div class="info">Note: "Hard" difficulty does not guarantee a harder game, but it simply allows the generator to make one that is.</div>
             </div>
+
+            <!-- <div class="setting">
+                <input type="checkbox" id="highlightCheckbox" aria-label="Highlight Mines">
+                <label for="highlightCheckbox">Highlight Mines</label>
+            </div> -->
 
             <div class="setting">
                 <label for="shapeSelector">Shape:</label>
