added neighbor assist toggle

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             </div>
 
             <div class="setting">
+                <label for="highlightNeighborsCheckbox">Neighbor Assist <input type="checkbox" id="highlightNeighborsCheckbox" aria-label="Highlight Neighbors" checked></label>
+                <div class="info">Shows you which cells are being counted towards the mine count and lets you click to open all neighbors of a cell.</div>
+            </div>
+
+            <div class="setting">
                 <label for="highlightAssistCheckbox">Highlight Assist <input type="checkbox" id="highlightAssistCheckbox" aria-label="Highlight Assist"></label>
                 <div class="info">The highlight assist will tell you if the amount of flags around a cell matches the number on the cell itself. This can help you focus on performing logical deduction without worrying about making silly mistakes.</div>
             </div>
