funky changes. mildly experimental

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Minesweeper</h1>
     <div class="controls">
         <button id="settingsBtn">⚙️ Settings</button>
+        <button id="actionToggle" class="toggleable square">🚩</button>
         <span>Flags: <span id="flagCount"></span></span>
     </div>
     <div id="board"></div>
