--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <span>Hard</span>
                     <span>Unlocked</span>
                 </div>
-                <div class="info">The difficulty slider controlls how constrained the mine placement is. Easy should require no brainpower. Hard should be harder. Unlocked places no constraints on mine placement which may result in unsolvable games.</div>
+                <div class="info">The difficulty slider controls how constrained the mine placement is. Easy should require no brainpower. Hard should be harder. Unlocked places no constraints on mine placement which may result in unsolvable games.</div>
                 <div class="info">Note: "Hard" difficulty does not guarantee a harder game, but it simply allows the generator to make one that is.</div>
             </div>
 
